--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,313 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="ua">
+  <head class="page">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>HAMU-Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <link rel="icon" href="./images/hamuicon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="page__header header" id="header">
+      <div class="header__photo"></div>
+      <a href="#menu" class="header__menu-icon"></a>
+      <a href="#" class="header__logo"></a>
+
+      <h1 class="header__title">
+        Художній
+        <br>
+        музей
+      </h1>
+
+      <div class="header__button button button--default">
+        <a href="#events" class="button__name button--default__name"></a>
+        <a href="#subscription" class="button__icon button--default__icon"></a>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top top-actions">
+            <a href="#" class="menu__icon"></a>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#events" class="menu__link">Актуальні виставки</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#lecture" class="menu__link">Події</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#subscription" class="menu__link">Оформити підписку</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+
+          <a
+            href="tel:+38 (044) 278-13-57"
+            class="menu__call menu__call--phone"
+          >
+            +38 (044) 278-13-57
+          </a>
+
+          <a
+            href="https://goo.gl/maps/iR5eMWhCfeZHAxN17"
+            class="menu__call menu__call--action"
+            target="_blank"
+          >
+            Як дістатися?
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <main class="page__main">
+      <section class="page__events events" id="events">
+        <h2 class="events__title">Актуальні події</h2>
+
+        <div class="events__exhebition exhibition">
+          <img
+            src="./images/ph1.png"
+            alt="Exhibition Intro"
+            class="exhibition__image"
+          >
+
+          <div class="exhibition__description">
+            <p class="exhibition__info">
+              <span class="exhibition__type">Виставка</span>
+              <time class="exhibition__date">26.09-29.11.2019</time>
+            </p>
+            <h3 class="exhibition__name">Йду і повертаюсь</h3>
+            <p class="exhibition__details">
+              Національний Художній Музей
+              України презентує унікальну частину
+              колекції Градобанку - українське
+              мистецтво другої половини
+              1980&#8209;1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="events__exhibition exhibition">
+          <img
+            src="./images/ph2.png"
+            alt="Exhibition Intro"
+            class="exhibition__image"
+          >
+
+          <div class="exhibition__description">
+            <p class="exhibition__info">
+              <span class="exhibition__type">Виставка</span>
+              <time class="exhibition__date">26.09-29.11.2019</time>
+            </p>
+            <h3 class="exhibition__name">І спогади і мрії</h3>
+            <p class="exhibition__details">
+              Національний художній музей
+              України до 100 річчя від дня
+              народження видатної української
+              художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну
+              виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__lecture lecture" id="lecture">
+        <img src="./images/ph3.png" alt="Lecture Intro" class="lecture__image">
+
+        <div class="lecture__description">
+          <p class="lecture__info">
+            <span class="lecture__type">Лекція</span>
+            <time class="lecture__date">26/08/2019 - 11:00</time>
+          </p>
+
+          <h3 class="lecture__name">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+
+      <section class="page__gallery gallery" id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__images">
+          <img
+            src="./images/ph4.png"
+            alt="Picture 1"
+            class="gallery__image gallery__image--1"
+          >
+
+          <img
+            src="./images/ph5.png"
+            alt="Picture 2"
+            class="gallery__image gallery__image--2"
+          >
+
+          <img
+            src="./images/ph6.png"
+            alt="Picture 3"
+            class="gallery__image gallery__image--3"
+          >
+
+          <img
+            src="./images/ph7.png"
+            alt="Picture 4"
+            class="gallery__image gallery__image--4"
+          >
+        </div>
+      </section>
+
+      <section class="page__subscription subscription" id="subscription">
+        <h2 class="subscription__title">Підписка</h2>
+
+        <p class="subscription__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form action="#" class="subscription__button button button--input">
+          <label for="email">
+            <input
+              name="email"
+              id="email"
+              type="email"
+              placeholder="E-mail"
+              class="button__name button--input__name"
+              required
+            >
+          </label>
+          <button type="submit" class="button__icon button--input__icon"></button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="page__footer footer">
+      <div class="footer__logos">
+        <a href="#" class="footer__logo"></a>
+        <div class="footer__medias">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            class="footer__facebook"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            class="footer__instagram"
+            target="_blank"
+          ></a>
+        </div>
+      </div>
+
+      <p class="footer__schedule">
+        <span class="footer__title">Графік роботи</span>
+
+        <span class="footer__info">
+          <time class="footer__important">12:00 - 20:00</time>
+          середа<br>
+
+          <time class="footer__important">12:00 - 20:00</time>
+          четвер<br>
+
+          <time class="footer__important">12:00 - 20:00</time>
+          п'ятниця<br>
+
+          <time class="footer__important">11:00 - 19:00</time>
+          субота<br>
+
+          <time class="footer__important">11:00 - 19:00</time>
+          неділя<br>
+        </span>
+
+        <span class="footer__details">
+          <span class="footer__important">Вихідні:</span> понеділок, вівторок<br>
+          Каса припиняє роботу за 1 годину до закриття музею
+        </span>
+      </p>
+
+      <p class="footer__contacts" id="contacts">
+        <span class="footer__title">Контакти:</span>
+
+        <span class="footer__info">
+          <a
+            href="https://goo.gl/maps/wkwkKcTbmVy5AG989"
+            target="_blank"
+            class="footer__link"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a><br>
+
+          <a href="tel:+38 (044) 278-13-57" class="footer__link">
+            тел. +38 (044) 278-13-57
+          </a><br>
+
+          <a href="tel:+38 (044) 278-13-57" class="footer__link">
+            факс +38 (044) 278-74-54
+          </a><br>
+
+          <a href="mailto:info@namu.kiev.ua" class="footer__link">
+            e-mail: info@namu.kiev.ua
+          </a><br>
+        </span>
+      </p>
+
+      <a href="#header" class="footer__arrow"></a>
+
+      <div class="footer__line"></div>
+
+      <nav class="footer__nav">
+        <ul>
+          <li class="footer__list">
+            <a href="#gallery" class="footer__link">
+              Галерея
+            </a>
+          </li>
+
+          <li>
+            <a href="#events" class="footer__link">
+              Виставки та події
+            </a>
+          </li>
+        </ul>
+
+        <ul>
+          <li class="footer__list">
+            <a
+              href="https://www.facebook.com/namu.museum/"
+              target="_blank"
+              class="footer__link"
+            >
+              Про нас
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://goo.gl/maps/1DHZ9D3PvNBVTe439"
+              target="_blank"
+              class="footer__link"
+            >
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <p class="footer__copyright">
+        <span class="footer__author">Copyright © 2019. All Rights Reserved.</span>
+        <span class="footer__author">Designed by Zhyriada Marina</span>
+      </p>
+    </footer>
   </body>
 </html>
