--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,8 @@
       </section>
 
       <section class="page__lecture lecture" id="lecture">
-        <img src="./images/ph3.png" alt="Lecture Intro" class="lecture__image">
+        <img src="./images/ph3.png" alt="Lecture Intro" 
+        class="lecture__image">
 
         <div class="lecture__description">
           <p class="lecture__info">
