--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head class="page">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
+    <title>Hamu-Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" href="./images/hamuicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
