--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/icon.jpg">
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="container">
+      <div class="container__blocks">
+        <a href="#menu"><img src="./images/header/sidebar.jpg" alt="sidebar" class="container__img"></a>
+        <h1 class="container__header">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
+        <div class="container__block1">
+          <span class="container__ticket">КВИТКИ</span>
+          <a href="#footer">
+            <div class="container__arrow_con">
+              <img src="./images/header/arrow.jpg" alt="arrow">
+            </div>
+          </a>
+        </div>
+        <div class="container__block2">
+          <p class="container__event"> ПОДІЇ</p>
+        </div>
+      </div>
+      <div class="container__bg">
+        <a href="#menu"><img src="./images/header/sidebar.jpg" alt="sidebar" class="container__img_slide"></a>
+        <h1 class="container__logo"><img src="./images/footer/logo.jpg"/></h1>
+      </div>
+    </header>
+    <div id="menu" class="container__slider">
+      <div class="container__holder">
+        <img src="./images/footer/logo.jpg" class="container__logo_slide" alt="logo">
+        <a href="#">
+          <img class="container__close" src="./images/header/cross.jpg" alt="close">
+        </a>
+      </div>
+      <div class="container__holder2">
+        <a href="#about" class="container__links">
+          <h3>події</h3>
+        </a>
+        <a href="#gallery" class="container__links">
+          <h3>Галерея</h3>
+        </a>
+        <a href="#forum" class="container__links">
+          <h3>Підписка</h3>
+        </a>
+        <a href="#footer" class="container__links">
+          <h3>условия</h3>
+        </a>
+      </div>
+    </div>
+    <div id="about" class="container2">
+      <h1 class="container2__events">Актуальні події</h1>
+      <div class="container2__info">
+        <img class="container2__pic" alt="nature picture" src="./images/events/nature.jpg">
+        <div class="container2__text">
+          <div class="container2__det">
+            <p class="container2__ser">ВИСТАВКА</p>
+            <p class="container2__number">26.08-29.11.2019</p>
+          </div>
+          <h2 class="container2__about">Йду і повертаюсь</h2>
+          <p class="container2__para">Національний Художній Музей України презентує унікальну частину колекції Градобанку
+            - українське
+            мистецтво
+            другої половини 1980-1995 років.
+          </p>
+        </div>
+      </div>
+      <div class="container2__info">
+        <img class="container2__pic" alt="girl picture" src="./images/events/girl.jpg">
+        <div class="container2__text">
+          <div class="container2__det">
+            <p class="container2__ser">ВИСТАВКА</p>
+            <p class="container2__number">26.08-29.11.2019</p>
+          </div>
+          <h2 class="container2__about2">І спогади і мрії</h2>
+          <p class="container2__para">Національний художній музей України до 100 річчя від дня народження видатної
+            української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </div>
+      </div>
+    </div>
+    <div id="event" class="container3">
+      <div class="container3__bg">
+        <div class="container3__holder">
+          <div class="container3__box">
+            <p class="container3__ser">ЛЕКЦІЯ</p>
+            <p class="container3__number">26/08/2019 - 11:00</p>
+          </div>
+          <h1 class="container3__text">Від класицизму до<br> романтизму</h1>
+        </div>
+      </div>
+    </div>
+    <div id="gallery" class="container4">
+      <h1 class="container4__head">Галерея</h1>
+      <div class="container4__gallery">
+        <img class="container4__pics" src="./images/gallery/dancing.jpg" alt="pic 1">
+        <img class="container4__pics" src="./images/gallery/snow.jpg" alt="pic 2">
+        <img class="container4__pics" src="./images/gallery/garden.jpg" alt="pic 3">
+        <img class="container4__pics" src="./images/gallery/beach.jpg" alt="pic 4">
+      </div>
+      <div class="container4__dots">
+        <div class="container4__circle1"></div>
+        <div class="container4__circle"></div>
+        <div class="container4__circle"></div>
+        <div class="container4__circle"></div>
+      </div>
+    </div>
+    <div id="forum" class="container5">
+      <div class="container5__block">
+        <div class="container5__form">
+          <div class="container5__headers">
+            <h1 class="container5__head1">Підписка</h1>
+            <h2 class="container5__head2">Бути в курсі всіх актуальних подій та останніх новин.</h2>
+            <form action="#" method="get" class="container5__bar">
+              <input required class="container5__input" placeholder="E-mail" type="email" name="email">
+              <button id="bttn" type="submit" class="container5__submit">
+                <img src="./images/form/vector.jpg" alt="arrow">
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="footer" class="container6">
+      <div class="container6__block">
+        <a href="#">
+          <img src="./images/footer/logo.jpg" class="container6__logo" alt="logo">
+        </a>
+        <div class="container6__social">
+          <a href="https://www.facebook.com">
+            <img class="container6__face" src="./images/footer/face.jpg" alt="facebook logo">
+          </a>
+          <a href="https://www.instagram.com">
+            <img class="container6__insta" src="./images/footer/insta.jpg" alt="instagram logo">
+          </a>
+        </div>
+      </div>
+      <div class="container6__block2">
+        <div class="container6__content">
+          <p class="container6__con1">Графік роботи</p>
+          <span class="container6__data">
+            12:00— 20:00 середа
+            12:00— 20:00 четвер
+            12:00 — 20:00 п’ятниця
+            11:00 — 19:00 субота
+            11:00 — 19:00 неділя
+            <br><br>
+            Вихідні: понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </span>
+        </div>
+        <div class="container6__content">
+          <p class="container6__con1">Контакти:</p>
+          <span class="container6__data">
+            вул. М. Грушевського, 6; Київ, 01001
+            тел. +38 (044) 278-13-57
+            факс +38 (044) 278-74-54
+            e-mail: info@namu.kiev.ua
+          </span>
+        </div>
+        <div class="container6__line"></div>
+        <div class="container6__content2">
+          <div class="container6__con2">
+            <a class="container6__hove" href="#gallery">
+              <p class="container6__con1">Галерея</p>
+            </a>
+            <a class="container6__hove" href="#event">
+              <p class="container6__con1">Виставки та події</p>
+            </a>
+          </div>
+          <div class="container6__con2">
+            <a class="container6__hove" href="#about">
+              <p class="container6__con1">Про Нас</p>
+            </a>
+            <a class="container6__hove" href="#forum">
+              <p class="container6__con1">Контакти</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="container7">
+      <div class="container7__terms">
+        <p>Copyright © 2019. All Rights Reserved.</p>
+        <p>Designed by Zhyriada Marina</p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
