--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,22 @@
 <body>
   <header class="container">
     <div class="container__blocks">
-      <a href="#menu"><img src="./images/header/sidebar.jpg" alt="sidebar" class="container__img"></a>
+      <a href="#menu">
+        <img
+          src="./images/header/sidebar.jpg"
+          alt="sidebar"
+          class="container__img"
+        >
+      </a>
       <h1 class="container__header">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
       <div class="container__block1">
         <span class="container__ticket">КВИТКИ</span>
         <a href="#footer">
           <div class="container__arrow_con">
-            <img src="./images/header/arrow.jpg" alt="arrow">
+            <img
+              src="./images/header/arrow.jpg"
+              alt="arrow"
+            >
           </div>
         </a>
       </div>
@@ -30,15 +39,34 @@
       </div>
     </div>
     <div class="container__bg">
-      <a href="#menu"><img src="./images/header/sidebar.jpg" alt="sidebar" class="container__img_slide"></a>
-      <h1 class="container__logo"><img src="./images/footer/logo.jpg" /></h1>
+      <a href="#menu">
+        <img
+          src="./images/header/sidebar.jpg"
+          alt="sidebar"
+          class="container__img_slide"
+        >
+      </a>
+      <h1 class="container__logo">
+        <img
+          src="./images/footer/logo.jpg"
+          alt="gb"
+        >
+      </h1>
     </div>
   </header>
   <div id="menu" class="container__slider">
     <div class="container__holder">
-      <img src="./images/footer/logo.jpg" class="container__logo_slide" alt="logo">
+      <img
+        src="./images/footer/logo.jpg"
+        class="container__logo_slide"
+        alt="logo"
+      >
       <a href="#">
-        <img class="container__close" src="./images/header/cross.jpg" alt="close">
+        <img
+          class="container__close"
+          src="./images/header/cross.jpg"
+          alt="close"
+        >
       </a>
     </div>
     <div class="container__holder2">
@@ -59,7 +87,11 @@
   <div id="about" class="container2">
     <h1 class="container2__events">Актуальні події</h1>
     <div class="container2__info">
-      <img class="container2__pic" alt="nature picture" src="./images/events/nature.jpg">
+      <img
+        class="container2__pic"
+        alt="nature picture"
+        src="./images/events/nature.jpg"
+      >
       <div class="container2__text">
         <div class="container2__det">
           <p class="container2__ser">ВИСТАВКА</p>
@@ -74,7 +106,11 @@
       </div>
     </div>
     <div class="container2__info">
-      <img class="container2__pic" alt="girl picture" src="./images/events/girl.jpg">
+      <img
+        class="container2__pic"
+        alt="girl picture"
+        src="./images/events/girl.jpg"
+      >
       <div class="container2__text">
         <div class="container2__det">
           <p class="container2__ser">ВИСТАВКА</p>
@@ -101,10 +137,26 @@
   <div id="gallery" class="container4">
     <h1 class="container4__head">Галерея</h1>
     <div class="container4__gallery">
-      <img class="container4__pics" src="./images/gallery/dancing.jpg" alt="pic 1">
-      <img class="container4__pics" src="./images/gallery/snow.jpg" alt="pic 2">
-      <img class="container4__pics" src="./images/gallery/garden.jpg" alt="pic 3">
-      <img class="container4__pics" src="./images/gallery/beach.jpg" alt="pic 4">
+      <img
+        class="container4__pics"
+        src="./images/gallery/dancing.jpg"
+        alt="pic 1"
+      >
+      <img
+        class="container4__pics"
+        src="./images/gallery/snow.jpg"
+        alt="pic 2"
+      >
+      <img
+        class="container4__pics"
+        src="./images/gallery/garden.jpg"
+        alt="pic 3"
+      >
+      <img
+        class="container4__pics"
+        src="./images/gallery/beach.jpg"
+        alt="pic 4"
+      >
     </div>
     <div class="container4__dots">
       <div class="container4__circle1"></div>
@@ -119,9 +171,23 @@
         <div class="container5__headers">
           <h1 class="container5__head1">Підписка</h1>
           <h2 class="container5__head2">Бути в курсі всіх актуальних подій та останніх новин.</h2>
-          <form action="#" method="get" class="container5__bar">
-            <input required class="container5__input" placeholder="E-mail" type="email" name="email">
-            <button id="bttn" type="submit" class="container5__submit">
+          <form
+            action="#"
+            method="get"
+            class="container5__bar"
+          >
+            <input
+              required
+              class="container5__input"
+              placeholder="E-mail"
+              type="email"
+              name="email"
+            >
+            <button
+              id="bttn"
+              type="submit"
+              class="container5__submit"
+            >
               <img src="./images/form/vector.jpg" alt="arrow">
             </button>
           </form>
@@ -132,14 +198,25 @@
   <div id="footer" class="container6">
     <div class="container6__block">
       <a href="#">
-        <img src="./images/footer/logo.jpg" class="container6__logo" alt="logo">
+        <img
+          src="./images/footer/logo.jpg"
+          class="container6__logo"
+          alt="logo"
+        >
       </a>
       <div class="container6__social">
         <a href="https://www.facebook.com">
-          <img class="container6__face" src="./images/footer/face.jpg" alt="facebook logo">
+          <img class="container6__face"
+            src="./images/footer/face.jpg"
+            alt="facebook logo"
+          >
         </a>
         <a href="https://www.instagram.com">
-          <img class="container6__insta" src="./images/footer/insta.jpg" alt="instagram logo">
+          <img
+            class="container6__insta"
+            src="./images/footer/insta.jpg"
+            alt="instagram logo"
+          >
         </a>
       </div>
     </div>
