--- a/src/index.html
+++ b/src/index.html
@@ -56,11 +56,13 @@
   </header>
   <div id="menu" class="container__slider">
     <div class="container__holder">
+      <a href="#">
       <img
         src="./images/footer/logo.jpg"
         class="container__logo_slide"
         alt="logo"
       >
+      </a>
       <a href="#">
         <img
           class="container__close"
