--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,457 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
+    <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="page__section header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-actions header__top-actions">
+            <div class="top-actions__content grid">
+              <a href="#menu" class="icon icon--menu"></a>
+
+              <div class="grid__item grid__item--ipad-4-5 grid__item--desktop-6-7 top-actions__logo">
+                <a href="#" class="logo">
+                  <img
+                    src="images/logo.png"
+                    alt="logo"
+                    class="logo__image"
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid--ipad">
+            <div class="grid__item grid__item--ipad-1-3 grid__item--desktop-1-5">
+              <h1 class="page__title">
+                Художній музей
+              </h1>
+            </div>
+
+            <div class="grid__item grid__item--ipad-1-3 grid__item--desktop-3-5">
+              <a href="#events" class="button">
+                Квитки
+              </a>
+            </div>
+
+            <div class="grid__item grid__item--ipad-4-6 grid__item--desktop-6-12">
+              <img
+                src="images/header.jpg"
+                alt="Museum"
+                class="header__image"
+              >
+            </div>
+          </div>
+
+          <div class="header__text-events">
+            Події
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="menu" id="menu">
+      <div class="container">
+        <div class="top-actions menu__top-actions">
+          <a href="#" class="icon icon--cross"></a>
+
+          <a href="#" class="logo menu__logo">
+            <img
+              src="images/logo.png"
+              alt="logo"
+              class="logo__image"
+            >
+          </a>
+        </div>
+
+        <div class="nav memu__nav">
+          <ul class="menu__nav-list">
+            <li class="menu__nav-item">
+              <a href="#gallery" class="menu__nav-link">
+                Галерея
+              </a>
+            </li>
+            <li class="menu__nav-item">
+              <a href="#" class="menu__nav-link">
+                Про Нас
+              </a>
+            </li>
+            <li class="menu__nav-item">
+              <a href="#events" class="menu__nav-link">
+                Виставки та події
+              </a>
+            </li>
+            <li class="menu__nav-item">
+              <a href="#contacts" class="menu__nav-link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <main>
+      <section class="page__section page__section--events events" id="events">
+        <div class="container">
+          <h2 class="page__section-title">
+            Актуальні події
+          </h2>
+
+          <div class="grid grid--ipad grid--desktop">
+            <div class="grid__item grid__item--desktop-1-7">
+              <div class="events__photo-container">
+                <img
+                  src="images/events/1.jpg"
+                  alt="Йду і повертаюсь"
+                  class="events__photo"
+                >
+              </div>
+            </div>
+
+            <div class="events__description grid__item grid__item--ipad-1-4 grid__item--desktop-9-12 ">
+              <div class="events__description">
+                <div class="events__info">
+                  <span class="events__subtitle">
+                    ВИСТАВКА
+                  </span>
+
+                  <span class="events__date">
+                    26.08-29.11.2019
+                  </span>
+                </div>
+
+                <h3 class="events__title">
+                  Йду і повертаюсь
+                </h3>
+
+                <p class="events__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <div class="grid__item grid__item--desktop-1-7">
+              <div class="events__photo-container">
+                <img
+                  src="images/events/2.jpg"
+                  alt="І спогади і мрії"
+                  class="events__photo"
+                >
+              </div>
+            </div>
+
+            <div class="events__description grid__item grid__item--ipad-1-4 grid__item--desktop-9-12 ">
+              <div class="events__description">
+                <div class="events__info">
+                  <span class="events__subtitle">
+                    ВИСТАВКА
+                  </span>
+
+                  <span class="events__date">
+                    26.08-29.11.2019
+                  </span>
+                </div>
+
+                <h3 class="events__title">
+                  І спогади і мрії
+                </h3>
+
+                <p class="events__text">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="lecture">
+          <div class="lecture__content">
+            <img
+              src="images/events/3.jpg"
+              alt="Від класицизму до романтизму"
+              class="lecture__photo"
+            >
+
+            <div class="lecture__info">
+              <div class="lecture__info-wrapper">
+                <span class="lecture__subtitle">
+                  ЛЕКЦІЯ
+                </span>
+
+                <span class="lecture__time">
+                  26/08/2019 - 11:00
+                </span>
+              </div>
+
+              <h3 class="lecture__title">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="page__section-title">
+            Галерея
+          </h2>
+
+          <div class="grid grid--desktop">
+            <div class="grid__item grid__item--desktop-1-4">
+              <img
+                src="images/gallery/gallery-photo-1.jpg"
+                alt="photo_1"
+                class="gallery__photo gallery__photo--first-row"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-5-12">
+              <img
+                src="images/gallery/gallery-photo-2.jpg"
+                alt="photo_2"
+                class="gallery__photo gallery__photo--first-row"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-1-8">
+              <img
+                src="images/gallery/gallery-photo-3.jpg"
+                alt="photo_3"
+                class="gallery__photo gallery__photo--second-row"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-9-12">
+              <img
+                src="images/gallery/gallery-photo-4.jpg"
+                alt="photo_4"
+                class="gallery__photo gallery__photo--second-row"
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="page__slider">
+          <div class="slider">
+            <input
+              type="radio"
+              name="slider"
+              class="slider__radio slider__r1"
+              id="slide_1"
+              checked
+            >
+            <input
+              type="radio"
+              name="slider"
+              class="slider__radio slider__r2"
+              id="slide_2"
+            >
+            <input
+              type="radio"
+              name="slider"
+              class="slider__radio slider__r3"
+              id="slide_3"
+            >
+            <input
+              type="radio"
+              name="slider"
+              class="slider__radio slider__r4"
+              id="slide_4"
+            >
+
+            <div class="slider__slides">
+              <img
+                src="images/gallery/gallery-photo-1.jpg"
+                alt="slide_1"
+                class="slider__img slider__img--1"
+              >
+              <img
+                src="images/gallery/gallery-photo-5.jpg"
+                alt="slide_2"
+                class="slider__img slider__img--2"
+              >
+              <img
+                src="images/gallery/gallery-photo-3.jpg"
+                alt="slide_3"
+                class="slider__img slider__img--3"
+              >
+              <img
+                src="images/gallery/gallery-photo-4.jpg"
+                alt="slide_4"
+                class="slider__img slider__img--4"
+              >
+            </div>
+
+            <div class="slider__controls">
+              <label class="slider__controls-lable slider__controls-lable--1" for="slide_1"></label>
+              <label class="slider__controls-lable slider__controls-lable--2" for="slide_2"></label>
+              <label class="slider__controls-lable slider__controls-lable--3" for="slide_3"></label>
+              <label class="slider__controls-lable slider__controls-lable--4" for="slide_4"></label>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section subscription">
+        <h2 class="subscription__title">
+          Підписка
+        </h2>
+
+        <div class="container">
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+        </div>
+
+        <form action="#">
+          <input
+            type="email"
+            placeholder="E-mail"
+            required
+            class="subscription__field"
+          >
+          <button class="subscription__button">&gt;</button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="grid">
+          <div class="grid__item grid__item--mobail-1-2 grid__item--ipad-1-1 grid__item--desktop-1-1">
+            <div class="footer__top-actions">
+              <a href="#" class="logo footer__logo">
+                <img
+                  src="images/logo.png"
+                  alt="logo"
+                  class="logo__image"
+                >
+              </a>
+
+              <div class="footer__icons-wrapper">
+                <a
+                  href="#"
+                  class="icon icon--facebook"
+                  target="_blank"
+                ></a>
+                <a
+                  href="#"
+                  class="icon icon--instagram"
+                  target="_blank"
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--mobail-1-1 grid__item--ipad-2-3 grid__item--desktop-3-4">
+            <div class="footer__shedule">
+              <h3 class="footer__subtitle">
+                Графік роботи
+              </h3>
+
+              <ul class="footer__shedule-list">
+                <li class="footer__text">
+                  <span class="footer__text--bold">12:00 — 20:00</span> середа
+                </li>
+                <li class="footer__text">
+                  <span class="footer__text--bold">12:00 — 20:00</span> четвер
+                </li>
+                <li class="footer__text">
+                  <span class="footer__text--bold">12:00 — 20:00</span> п’ятниця
+                </li>
+                <li class="footer__text">
+                  <span class="footer__text--bold">11:00 — 19:00</span> субота
+                </li>
+                <li class="footer__text">
+                  <span class="footer__text--bold">11:00 — 19:00</span> неділя
+                </li>
+                <br>
+                <li class="footer__text">
+                  <span class="footer__text--bold">Вихідні:</span> понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--mobail-2-2 grid__item--ipad-4-5 grid__item--desktop-5-6">
+            <div class="footer__item">
+              <h3 class="footer__subtitle">
+                Контакти:
+              </h3>
+              <p class="footer__text">
+                вул. М. Грушевського, 6; Київ, 01001
+                <br>
+                тел. +38 (044) 278-13-57
+                <br>
+                факс +38 (044) 278-74-54
+                <br>
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+          </div>
+
+          <div class="footer__link-wrapper grid__item grid__item--mobail-2-2">
+            <a href="#" class="footer__link"></a>
+          </div>
+
+          <div class="grid__item grid__item--mobail-1-2 grid__item--ipad-2-5 grid__item--desktop-7-7">
+            <div class="footer__line"></div>
+          </div>
+
+          <div class="grid__item grid__item--mobail-1-2 grid__item--ipad-2-4 grid__item--desktop-8-10">
+            <div class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#gallery" class="nav__link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#events" class="nav__link">
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#contacts" class="nav__link">
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__designed-info">
+          <p class="footer__designed-text">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="footer__designed-text">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
