--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
     </div>
     <div class="container__bg">
       <a href="#menu"><img src="./images/header/sidebar.jpg" alt="sidebar" class="container__img_slide"></a>
-      <h1 class="container__logo"><img src="./images/footer/logo.jpg" /></h1>
+      <h1 class="container__logo"><img src="./images/footer/NA MU.svg" /></h1>
     </div>
   </header>
   <div id="menu" class="container__slider">
     <div class="container__holder">
       <a href="#">
-        <img src="./images/footer/logo.jpg"
+        <img src="./images/footer/NA MU.svg"
           class="container__logo_slide"
           alt="logo"
         >
@@ -61,7 +61,7 @@
         <h3>Підписка</h3>
       </a>
       <a href="#footer" class="container__links">
-        <h3>условия</h3>
+        <h3>Контакти</h3>
       </a>
     </div>
   </div>
@@ -121,7 +121,8 @@
       <img
         class="container4__pics"
         src="./images/gallery/dancing.jpg"
-        alt="pic 1">
+        alt="pic 1"
+      >
       <img
         class="container4__pics"
         src="./images/gallery/snow.jpg"
@@ -179,23 +180,23 @@
     <div class="container6__block">
       <a href="#">
         <img
-          src="./images/footer/logo.jpg"
+          src="./images/footer/NA MU.svg"
           class="container6__logo"
           alt="logo"
         >
       </a>
       <div class="container6__social">
-        <a href="https://www.facebook.com">
+        <a href="https://www.facebook.com" target="_blank">
           <img
             class="container6__face"
-            src="./images/footer/face.jpg"
+            src="./images/footer/Facebook.svg"
             alt="facebook logo"
           >
         </a>
-        <a href="https://www.instagram.com">
+        <a href="https://www.instagram.com" target="_blank">
           <img
             class="container6__insta"
-            src="./images/footer/insta.jpg"
+            src="./images/footer/instagram (3).svg"
             alt="instagram logo"
           >
         </a>
@@ -205,11 +206,11 @@
       <div class="container6__content">
         <p class="container6__con1">Графік роботи</p>
         <span class="container6__data">
-          12:00— 20:00 середа
-          12:00— 20:00 четвер
-          12:00 — 20:00 п’ятниця
-          11:00 — 19:00 субота
-          11:00 — 19:00 неділя
+          <span class="container6__time">12:00— 20:00</span> середа
+          <span class="container6__time">12:00— 20:00</span>  четвер
+          <span class="container6__time">12:00— 20:00</span>  п’ятниця
+          <span class="container6__time">11:00— 19:00</span> субота
+          <span class="container6__time">11:00— 19:00</span> неділя
           <br><br>
           Вихідні: понеділок, вівторок
           Каса припиняє роботу за 1 годину
@@ -248,8 +249,8 @@
   </div>
   <footer class="container7">
     <div class="container7__terms">
-      <p>Copyright © 2019. All Rights Reserved.</p>
-      <p>Designed by Zhyriada Marina</p>
+      <p class="container7__text">Copyright © 2019. All Rights Reserved.</p>
+      <p class="container7__text">Designed by Zhyriada Marina</p>
     </div>
   </footer>
   <script type="text/javascript" src="scripts/main.js"></script>
