--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <link rel="icon" href="./images/logo.svg">
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+
+    <header class="page__header header">
+      <div class="header__content">
+        <div class="header__top">
+          <div class="container">
+            <nav class="header__nav nav">
+              <a href="#menu" class="header__menu-icon icon"></a>
+
+              <a
+                href="#home"
+                class="logo
+                logo--header
+                icon"
+              >
+              </a>
+
+              <img 
+              src="./images/header-back.jpg" 
+              alt="museum" 
+              class="header__image"
+              >
+            </nav>
+          </div>
+        </div>
+
+        <div
+          class="container
+          header__info
+          grid
+          grid--device"
+        >
+          <h1 
+            class="header__title
+            title
+            grid__item
+            grid__item--onTab_1-3
+            grid__item--onDesktop_1-5"
+          >
+            Художній музей
+          </h1>
+      
+          <a 
+            href="#" 
+            class="buy-link 
+            grid__item 
+            grid__item--onTab_1-3 
+            grid__item--onDesktop_3-5"
+          >
+            <div class="buy-link__text">Квитки</div>
+
+            <div class="buy-link__button icon"></div>
+          </a>
+        </div>
+        
+        <div>
+          <div class="container">
+            <a href="#actions" class="header__actions">
+              події
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
