Header and gallery blocks were changed

--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@
             Галерея
           </h2>
 
-          <div class="grid grid--desktop">
+          <div class="gallery__content grid grid--desktop">
             <div class="grid__item grid__item--desktop-1-4">
               <img
                 src="images/gallery/gallery-photo-1.jpg"
