--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -75,5 +75,158 @@
         </div>
       </div>
     </header>
+
+    <section class="page__actions actions">
+      <div class="container">
+        <h2 class="actions__title title">
+          Актуальні 
+          <div class="actions__space"></div> 
+          події
+        </h2>
+
+        <article 
+          class="exhibition 
+          grid 
+          grid--device"
+        >
+          <img 
+            src="./images/exhibition/exhibition-img-1.png" alt="nature" 
+            class="exhibition__image
+            grid__item
+            grid__item--onTab_1-6
+            grid__item--onDesktop_1-7"
+          >
+
+          <div 
+            class="exhibition__content
+            grid__item
+            grid__item--onTab_1-4
+            grid__item--onDesktop_9-12"
+          >
+            <div class="exhibition__info">
+              <p class="exhibition__exhibition">
+                виставка
+              </p>
+
+              <div class="exhibition__date">
+                26.08-29.11.2019
+              </div>
+            </div>
+
+            <div class="exhibition__about">
+              <h3 class="exhibition__title title">
+                Йду і повертаюсь
+              </h3>
+
+              <p class="exhibition__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </article>
+
+        <article 
+          class="exhibition 
+          grid 
+          grid--device"
+        >
+          <img 
+            src="./images/exhibition/exhibition-img-2.jpg" alt="nature" 
+            class="exhibition__image
+            grid__item
+            grid__item--onTab_1-6
+            grid__item--onDesktop_1-7"
+          >
+
+          <div 
+            class="exhibition__content
+            grid__item
+            grid__item--onTab_1-4
+            grid__item--onDesktop_9-12"
+          >
+            <div class="exhibition__info">
+              <p class="exhibition__exhibition">
+                виставка
+              </p>
+
+              <div class="exhibition__date">
+                26.08-29.11.2019
+              </div>
+            </div>
+
+            <div class="exhibition__about">
+              <h3 class="exhibition__title title">
+                І спогади і мрії
+              </h3>
+
+              <p class="exhibition__text">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </article>
+
+      </div>
+    </section>
+
+    <section class="page__lection lection">
+      <div class="lection__content container">
+        <img 
+          src="./images/lection/lection.png" 
+          alt="sunset" 
+          class="lection__background"
+        >
+
+        <div class="lection__info">
+          <div class="lection__date-info">
+            <p class="lection__lection">
+              лекція
+            </p>
+   
+            <div class="lection__date">
+              26/08/2019 - 11:00
+            </div>
+          </div>
+   
+          <h3 class="lection__title title">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery">
+      <div class="container">
+        <h2 class="gallery__title tiltle">
+          Галерея
+        </h2>
+
+        <div class="gallery__pictures">
+          <img 
+            src="#" 
+            alt="picture-1" 
+            class="gallery__picture-1"
+          >
+
+          <img 
+            src="#" 
+            alt="picture-2" 
+            class="gallery__picture-2"
+          >
+
+          <img 
+            src="#" 
+            alt="picture-3" 
+            class="gallery__picture-3"
+          >
+
+          <img 
+            src="#" 
+            alt="picture-4" 
+            class="gallery__picture-4"
+          >
+        </div>
+      </div>
+    </section>
   </body>
 </html>
