Hover effects were added

--- a/src/index.html
+++ b/src/index.html
@@ -53,9 +53,9 @@
             </div>
           </div>
 
-          <div class="header__text-events">
+          <a href="#events" class="header__text-events">
             Події
-          </div>
+          </a>
         </div>
       </div>
     </header>
@@ -74,7 +74,7 @@
           </a>
         </div>
 
-        <div class="nav memu__nav">
+        <nav class="nav memu__nav">
           <ul class="menu__nav-list">
             <li class="menu__nav-item">
               <a href="#gallery" class="menu__nav-link">
@@ -97,7 +97,7 @@
               </a>
             </li>
           </ul>
-        </div>
+        </nav>
       </div>
     </div>
 
@@ -344,12 +344,12 @@
 
               <div class="footer__icons-wrapper">
                 <a
-                  href="#"
+                  href="https://www.facebook.com/namu.museum/"
                   class="icon icon--facebook"
                   target="_blank"
                 ></a>
                 <a
-                  href="#"
+                  href="https://www.instagram.com/namu.museum/"
                   class="icon icon--instagram"
                   target="_blank"
                 ></a>
@@ -394,15 +394,23 @@
               <h3 class="footer__subtitle">
                 Контакти:
               </h3>
-              <p class="footer__text">
+
+              <a
+                href="https://goo.gl/maps/GHtbrHqempphvZmp7"
+                class="footer__text footer__contacts-link"
+                target="_blank"
+              >
                 вул. М. Грушевського, 6; Київ, 01001
-                <br>
+              </a>
+              <a href="tel:+38 (044) 278-13-57" class="footer__text footer__contacts-link">
                 тел. +38 (044) 278-13-57
-                <br>
+              </a>
+              <a href="fax:+38 (044) 278-74-54" class="footer__text footer__contacts-link">
                 факс +38 (044) 278-74-54
-                <br>
+              </a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__text footer__contacts-link">
                 e-mail: info@namu.kiev.ua
-              </p>
+              </a>
             </div>
           </div>
 
@@ -415,7 +423,7 @@
           </div>
 
           <div class="grid__item grid__item--mobail-1-2 grid__item--ipad-2-4 grid__item--desktop-8-10">
-            <div class="nav">
+            <nav class="nav">
               <ul class="nav__list">
                 <li class="nav__item">
                   <a href="#gallery" class="nav__link">
@@ -438,7 +446,7 @@
                   </a>
                 </li>
               </ul>
-            </div>
+            </nav>
           </div>
         </div>
 
